# bitcoin-monitor

./: .gitignore  README.md  pyproject.toml
bitcoin_monitor/: __init__.py  api.py  cli.py
bitcoin_monitor/core/: monitor.py  notify.py  validation.py
examples/: monitor_address.py  simple_monitor.py
examples/supervisor/: monitor.py  supervisor_helper.py  supervisord.conf
